--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,8 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "gh-pages": "^2.0.1",
+    "mobx": "^6.4.2",
+    "mobx-react": "^7.3.0",
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
